product model & view

--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -2,9 +2,21 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>bike test gryon 2020 </title>	
+    <title>Bike test gryon 2020 </title>	
   </head>
   <body>
+    <div id='products'>
+      <h1>Products</h1>
+      <table>
+        <thead>
+
+        </thead>
+     
+        <tbody id="products-list">
+
+        </tbody>
+      </table>
+    </div>
   </body>
   <script src="bundle.js"></script>
 </html>
