--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -5,7 +5,8 @@
     <title>Bike test gryon 2020 </title>	
   </head>
   <body>
-    <div id='products'>
+<!--     // data-role=admin
+ -->    <div id='products'>
       <h1>Products</h1>
       <table>
         <thead>
