created catalogue model collection and view

--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -12,8 +12,19 @@
         <thead>
 
         </thead>
+<!--      Id pour la liste des produits
+ -->        <tbody id="products-list">
+
+        </tbody>
+      </table>
+<!--       id pour le catalogue
+ -->      <h1>Catalogue</h1>
+      <table>
+        <thead>
+
+        </thead>
      
-        <tbody id="products-list">
+        <tbody id="catalogues-list">
 
         </tbody>
       </table>
