--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <title>Bike test gryon 2020 </title>	
-  </head>
-  <body>
-<!--     // data-role=admin
- -->    <div id='products'>
-      <h1>Products</h1>
-      <table>
-        <thead>
 
-        </thead>
-<!--      Id pour la liste des produits
- -->        <tbody id="products-list">
+<head>
+  <meta charset="utf-8">
+  <title>Bike test gryon 2020 </title>
+</head>
 
-        </tbody>
-      </table>
-<!--       id pour le catalogue
- -->      <h1>Catalogue</h1>
-      <table>
-        <thead>
+<body>
+  <!--     data-role=admin-->
+  <div id='products'>
+    <h1>Products</h1>
+    <table>
+      <thead>
 
-        </thead>
-     
-        <tbody id="catalogues-list">
+      </thead>
+      <!--Id pour la liste des produits-->
+      <tbody id="products-list">
 
-        </tbody>
-      </table>
-    </div>
-  </body>
-  <script src="bundle.js"></script>
+      </tbody>
+    </table>
+    <!-- id pour le catalogue-->
+  </div>
+  <div id='catalogue'>
+
+    <h1>Catalogue</h1>
+    <table>
+      <thead>
+
+      </thead>
+
+      <tbody id="catalogues-list">
+
+      </tbody>
+    </table>
+  </div>
+</body>
+<script src="bundle.js"></script>
+
 </html>
