rajoue de fichiers css

--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bike Test Gryon</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div id="wrapper">
     <header>
         <h1>Bike Test Gryon</h1>
         <!--ajouter image du logo au lieu du h1-->
@@ -27,6 +29,7 @@
     <main>
         <div class="page" name="allProducts">
             <h1>Catalogue</h1>
+            
             <div id="products-list" class="row"></div>
 
             <nav class="navbar navbar-light bg-light">
@@ -139,6 +142,7 @@
         
         </div>
     </main>
+  </div>
 </body>
   <script src="bundle.js"></script>
 </html>
