--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -17,8 +17,8 @@
     <header>
         <h1>Bike Test Gryon</h1>
         <!--ajouter image du logo au lieu du h1-->
-        <img src="src/img/BikeTestLogo.svg" alt="">
-        <!--ajouter icone menu en format mobile-->
+        <!--<img src="src/img/BikeTestLogo.svg" alt="">
+        ajouter icone menu en format mobile-->
         <!--menu de navigation qui va se retrouver dans l'icone menu quand format mobile-->
         <nav>
             <div class="btn-nav icon-menu"></div>
