--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -38,7 +38,7 @@
                                       <table class="table">
                                           <tr>
                                               <td>
-                                                <a href="#allProducts">Catégorie</a>
+                                                <a href="#allProducts">Catalogue</a>
                                               </td>
                                           </tr>
                                           <tr>
@@ -48,7 +48,7 @@
                                           </tr>
                                           <tr>
                                               <td>
-                                                <a href="#profile">Mon comptes</a>
+                                                <a href="#profile">Mon compte</a>
                                               </td>
                                           </tr>
                                           
