--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="icon-menu" type="image/png" href="../src/icomoonSVG/PNG/menu.png">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -76,11 +77,11 @@
                          
                             
                             <div class="stars">
-                                <span class=".icon-star-full"></span>
-                                <span class=".icon-star-full"></span>
-                                <span class=".icon-star-full"></span>
-                                <span class=".icon-star-full"></span>
-                                <span class=".icon-star-empty"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star-empty"></span>
                             </div>
                             <p> date du test </p>
                         </div>
