--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -15,6 +15,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="nav.js"></script>
    
 
 </head>
@@ -28,6 +29,7 @@
             <li><a href="#allProducts">Catalogue</a> </li>
             <li><a href="#allTests">Historique des tests</a> </li>
             <li><a href="#profile">Mon compte</a> </li>
+            <li><a href=""></a>logout</li>
         </nav>
       </div>
       <div class="head">
