--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -17,7 +17,7 @@
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="nav.js"></script>
+  <script type="text/javascript" src="js/nav.js"></script>
 
 
 </head>
@@ -68,7 +68,7 @@
                 <div class="row">
                   <div class="well">
                     <div class="list-group">
-                      <a href="#" class="list-group-item active">
+                      <a href="html/produitX.html" class="list-group-item active">
                         <div class="media col-md-3">
                           <figure class="pull-left">
                             <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x250"
@@ -105,100 +105,57 @@
             </div>
 
             <div class="listeTest">
-            <!--Présentation des tests-->
-            <div class="container">
-              <div class="row">
-                <div class="well">
-                  <div class="list-group">
-                    <a href="#" class="list-group-item active">
-                      <div class="media col-md-3">
-                        <figure class="pull-left">
-                          <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x250"
-                            alt="placehold.it/350x250">
-                        </figure>
-                      </div>
-                      <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> Modèle </h4>
-                        <p class="list-group-item-text"> Marque </p>
-                        <p class="list-group-item-text"> Type </p>
-                      </div>
-                      <div class="col-md-3 text-center">
-                        <div class="stars">
-                          <span class="glyphicon glyphicon-star"></span>
-                          <span class="glyphicon glyphicon-star"></span>
-                          <span class="glyphicon glyphicon-star"></span>
-                          <span class="glyphicon glyphicon-star"></span>
-                          <span class="glyphicon glyphicon-star-empty"></span>
+              <!--Présentation des tests-->
+              <div class="container">
+                <div class="row">
+                  <div class="well">
+                    <div class="list-group">
+                      <a href="html/testX.html" class="list-group-item active">
+                        <div class="media col-md-3">
+                          <figure class="pull-left">
+                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x250"
+                              alt="placehold.it/350x250">
+                          </figure>
                         </div>
-                        <p> date du test </p>
-                      </div>
-                    </a>
+                        <div class="col-md-6">
+                          <h4 class="list-group-item-heading"> Modèle </h4>
+                          <p class="list-group-item-text"> Marque </p>
+                          <p class="list-group-item-text"> Type </p>
+                        </div>
+                        <div class="col-md-3 text-center">
+                          <div class="stars">
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star"></span>
+                            <span class="glyphicon glyphicon-star-empty"></span>
+                          </div>
+                          <p> date du test </p>
+                        </div>
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
 
           <!--PAGE MON COMPTE-->
           <div class="page" name="profile">
             <h1 class="titrePage">Mon compte</h1>
-            <!--ici, les infos du compte-->
+            <div class="infocompte">
+              <!--ici, les infos du compte-->
+            </div>
+            <button type="button" class="btn btn-default btn-lg">
+              <a href="html/modifieProfile.html"> Modifier les information du compte</a>
+            </button>
+            <button type="button" class="btn btn-default btn-lg">
+              <a href="index.html"> Changer le mot de passe</a>
+            </button>
 
           </div>
         </div>
       </div>
-      <!--Formulaire modification-->
-      <!--  <div id="profile-list" class="row"></div>
-            <div class="container">
-                <legend>Modifier les informations du compte</legend>
-
-                <form>
-                  <div class="form-group">
-                    <label for="inputName">Nom *</label>
-                    <input type="name" class="form-control" id="inputName" placeholder="Mon nom" required="">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputFirstname">Prénom *</label>
-                    <input type="firstname" class="form-control" id="inputFirstname" placeholder="Mon prénom" required="">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputEmail">Adresse Email *</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Mon adresse email" required="">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputPhonenumber">Numéro de téléphone</label>
-                    <input type="phonenumber" class="form-control" id="inputPhonenumber" placeholder="Mon numéro de téléphone">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputAdress">Adresse</label>
-                    <input type="adress" class="form-control" id="inputAdress" placeholder="Mon adresse">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputRoadnumber">Numéro de rue</label>
-                    <input type="roadnumber" class="form-control" id="inputRoadnumber" placeholder="Mon numéro de rue">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputNPA">NPA</label>
-                    <input type="NPA" class="form-control" id="inputNPA" placeholder="Mon npa">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputCity">Ville</label>
-                    <input type="city" class="form-control" id="inputCity" placeholder="Ma ville">
-                  </div>
-                  <div class="form-group">
-                    <label for="inputCanton">Canton</label>
-                    <input type="canton" class="form-control" id="inputCanton" placeholder="Mon canton">
-                  </div><div class="form-group">
-                    <label for="inputCountry">Pays</label>
-                    <input type="country" class="form-control" id="inputCountry" placeholder="Mon pays">
-                  </div>
-                  <p>* Champs obligatoires</p>
-                  <button type="submit" class="btn btn-default">Valider</button>
-                </form>
-
-                
-            </div> -->
 
       <!--PAGE ACCUEIL-->
       <!-- <div class="container">
@@ -219,8 +176,6 @@
             <button type="submit" class="btn btn-default">Créer un compte</button>
           </form>
         </div> -->
-      <a href="produitX.html"> produitX</a>
-      <a href="testX.html"> testX</a>
   </main>
 </body>
 <script src="bundle.js"></script>
