finalisation du css

--- a/artefact-laravel/public/html/produitX.html
+++ b/artefact-laravel/public/html/produitX.html
@@ -20,10 +20,12 @@
             <header>
                 <div class="row">
                     <div class="col-sm-4">
-                        <div class="btn-retour">
-                            <button type="button" class="btn btn-default btn-lg">
-                                    <a href="../index.html#allProducts"> <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-chevron-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/></svg>Retour</a>
-                            </button>
+                        <div class="btn-retour"> 
+                            <form action="../index.html#allProducts">
+                                <button type="submit" class="btn btn-default btn-lg" id="back">
+                                        <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-chevron-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/></svg>Retour
+                                </button>
+                            </form>
                         </div>
                     </div>
                     <div class="col-sm-4">
