--- a/artefact-laravel/public/html/modifieProfile.html
+++ b/artefact-laravel/public/html/modifieProfile.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/styleMP.css">
         <link rel="stylesheet" href="../css/nav.css">
         <link rel="stylesheet" href="../css/mobile.css">
         <link rel="icon-menu" type="image/png" href="../src/icomoonSVG/PNG/menu.png">
@@ -16,6 +15,7 @@
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="../css/styleMP.css">
         
 
 
@@ -24,35 +24,18 @@
         <header>
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="btn-retour">
-                        <button type="button" class="btn btn-default btn-lg">
-                                <a href="../index.html#allProducts"> <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-chevron-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/></svg>Retour</a>
-                        </button>
+                    <div class="d-flex justify-content-center">
+                         <form action="../index.html#profile">
+                            <button type="submit" class="btn btn-default btn-lg">Annuler</button>
+                        </form>
                     </div>
                 </div>
-                <img class="btlogo" src="../img/BikeTestLogo.svg">
-                <div class="nav-modal">
-                    <div class="blob"></div>
-                    <nav class="nav justify-content-center">
-                        <ul>
-                            <li><a href="../index.html#allProducts">Catalogue</a> </li>
-                            <li><a href="../index.html#allTests">Historique des tests</a> </li>
-                            <li><a href="../index.html#profile">Mon compte</a> </li>
-                            <li><a href=""></a>logout</li>
-                    </nav>
-                </div>
-            </div>
-            <div class="head">
-                <div class="tile burger">
-                    <div class="meat">
-                        <div class="line one"></div>
-                        <div class="line two"></div>
-                        <div class="line three"></div>
-                    </div>
+                <div class="col-sm-4">
+                <img  class="btlogo" src="../img/BikeTestLogo.svg">
                 </div>
             </div>
             
-        </header>
+          </header>
         <main>
             <!--Formulaire modification-->
             <div id="profile-list" class="row"></div>
