--- a/artefact-laravel/public/index.html
+++ b/artefact-laravel/public/index.html
@@ -8,16 +8,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/styleIndex.css">
   <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="icon-menu" type="image/png" href="../src/icomoonSVG/PNG/menu.png">
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/nav.js"></script>
+  <link rel="stylesheet" href="css/styleIndex.css">
 
 
 </head>
@@ -76,13 +74,13 @@
                           </figure>
                         </div>
                         <div class="col-md-6">
-                          <h4 class="list-group-item-heading"> Modèle </h4>
-                          <p class="list-group-item-text"> Marque </p>
-                          <p class="list-group-item-text"> Type </p>
+                          <h2 class="list-group-item-heading"> Modèle </h2>
+                          <h3 class="list-group-item-text"> Marque </h3>
+                          <h3 class="list-group-item-text"> Type </h3>
                         </div>
                         <div class="col-md-3 text-center">
                           <div class="disponible">
-                            <p>Disponible</p>
+                            <h4>Disponible</h4>
                           </div>
                         </div>
                       </a>
@@ -118,9 +116,9 @@
                           </figure>
                         </div>
                         <div class="col-md-6">
-                          <h4 class="list-group-item-heading"> Modèle </h4>
-                          <p class="list-group-item-text"> Marque </p>
-                          <p class="list-group-item-text"> Type </p>
+                          <h2 class="list-group-item-heading"> Modèle </h2>
+                          <h3 class="list-group-item-text"> Marque </h3>
+                          <h3 class="list-group-item-text"> Type </h3>
                         </div>
                         <div class="col-md-3 text-center">
                           <div class="stars">
@@ -130,7 +128,7 @@
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star-empty"></span>
                           </div>
-                          <p> date du test </p>
+                          <p>date du test</p>
                         </div>
                       </a>
                     </div>
@@ -146,13 +144,18 @@
             <div class="infocompte">
               <!--ici, les infos du compte-->
             </div>
-            <button type="button" class="btn btn-default btn-lg">
-              <a href="html/modifieProfile.html"> Modifier les information du compte</a>
-            </button>
-            <button type="button" class="btn btn-default btn-lg">
-              <a href="index.html"> Changer le mot de passe</a>
-            </button>
-
+            <div class="btn-compte">
+              <form action="html/modifieProfile.html">
+                <button type="submit" class="btn btn-default btn-lg" id="back">
+                  Modifier les information du compte
+                </button>
+              </form>
+              <form action="html/changePW.html">
+                <button type="submit" class="btn btn-default btn-lg" id="back">
+                  Changer le mot de passe
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
